--- a/scss/progress.scss
+++ b/scss/progress.scss
@@ -18,7 +18,15 @@
 	}
 }
 
-@include keyframes( progress-bar-stripes ) {
-	0%{ background-position: 40px 0; }
-	100%{ background-position: 0 0; }
+@-webkit-keyframes progress-bar-stripes {
+	from { background-position: 40px 0; }
+	to { background-position: 0 0; }
+}
+@-o-keyframes progress-bar-stripes {
+	from { background-position: 40px 0; }
+	to { background-position: 0 0; }
+}
+@keyframes progress-bar-stripes {
+	from { background-position: 40px 0; }
+	to { background-position: 0 0; }
 }
